--- a/timebox.html
+++ b/timebox.html
@@ -8,7 +8,7 @@
      <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
      <script src="timebox.js"></script>
   </head>
-  <body>
+  <body style="margin: 0;">
     <main></main>
   </body>
 </html>
