fix(display): clock and timebox both with better fullscreen and background reset

--- a/clock.html
+++ b/clock.html
@@ -8,7 +8,7 @@
      <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
      <script src="clock.js"></script>
   </head>
-  <body style="margin: 0px">
-    <main></main>
+  <body style="margin: 0">
+    <main style="display: flex"></main>
   </body>
 </html>
