--- a/timebox.html
+++ b/timebox.html
@@ -5,7 +5,7 @@
     <title>Timebox</title>
     <meta name="description" content="Webpage for xxxx">
     <!-- http://meyerweb.com/eric/tools/css/reset/ -->
-     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
      <script src="timebox.js"></script>
   </head>
   <body style="margin: 0">
